# haskell-book

./: .gitignore  Makefile  Readme.md  nixpkgs.nix  release.nix  shell.nix
haskell-book/: README.md  haskell-book.cabal
haskell-book/src/Ch10/: Exercise.hs
haskell-book/src/Ch1To5/: Addadd.hs  Arith3Broken.hs  ChangeMood.hs  Example.hs  Expr.hs  FunctionWithLet.hs  FunctionWithWhere.hs  Hwoo.hs  Learn.hs  Print1.hs  Print2.hs  Print3.hs  Print3broken.hs  Rvrs.hs  Sing.hs  ThirdLetter.hs  TopOrLocal.hs  WriedwaxOn.hs
haskell-book/src/Ch6/: Eq.hs  Experiments.hs  Person.hs
haskell-book/src/Ch7/: CasePractice.hs  Grabbag.hs
haskell-book/src/Ch8/: Example.hs  Exercise.hs  WordNumber.hs
haskell-book/src/Ch9/: Ciphers.hs  Exercise.hs
nix/: haskell-book.nix
